--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -453,3 +453,37 @@ letter-spacing: 0.04rem;
     list-style: none;
   }
 }
+
+@media screen and (min-width:1000px) and (max-width: 1200px){
+  .MenuItems {
+    ul {
+      li {
+
+        height: 4vw;
+      }
+     
+    }
+  }
+}
+@media screen and (min-width:700px) and (max-width: 1000px){
+  .MenuItems {
+    ul {
+      li {
+
+        height: 5vw;
+      }
+     
+    }
+  }
+}
+@media screen and (min-width:570px) and (max-width: 700px){
+  .MenuItems {
+    ul {
+      li {
+
+        height: 6vw;
+      }
+     
+    }
+  }
+}
