--- a/src/containers/MainContainer/AtmPortal/Airtel.module.css
+++ b/src/containers/MainContainer/AtmPortal/Airtel.module.css
@@ -731,6 +731,17 @@ input[type="file"]::file-selector-button:active {
     flex-direction: column;
     align-items: center;
     }
+    .searchpopup{
+      background-color: #f5f6fA !important;
+      /* min-width: 430px; */
+    width: 50vw;
+    left: 50%;
+    overflow:auto;
+    max-height: 96%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    }
 
 
 
