--- a/src/containers/MainContainer/AtmPortal/Airtel.module.css
+++ b/src/containers/MainContainer/AtmPortal/Airtel.module.css
@@ -481,7 +481,7 @@ line-height: normal;
 
 .box{
   /* width: 70%; */
-  width: 340px;
+  width: 380px;
 
 
 /* height: 300px; */
@@ -490,16 +490,17 @@ background: #FFF;
 box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.08);
 display: flex;
 flex-direction: column;
-gap:15px;
+gap:20px;
 padding: 15px 0px;
 align-items: center;
 justify-content: space-evenly;
 
 }
 .lefttitlelogo{
-  width: 30%;
-  /* margin-bottom: 4px; */
+  width: 50%;
+  margin-bottom: -10px;
 }
+
 .textcontainer{
   display: flex;
   flex-direction: column;
@@ -567,7 +568,8 @@ line-height: normal;
   width: 100vw;
   display: flex;
   align-items: center;
-}
+  background-color: #f6f6f6;
+  }
 
 .leftpage{
   width: 50%;
@@ -576,8 +578,9 @@ line-height: normal;
   display: flex;
   justify-content: center;
   align-items: center;
-  border-radius: 0px 14px 14px 0px;
-box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.08);
+  /* border-radius: 0px 14px 14px 0px; */
+  border-radius: 0px 75px 75px 0px;
+/* box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.08); */
 
 }
 
