--- a/src/containers/MainContainer/MainContainer.module.css
+++ b/src/containers/MainContainer/MainContainer.module.css
@@ -28,8 +28,7 @@
 .loader{
   width: 100vw;
     position: fixed;
-    /* display: flex; */
-    /* align-items: center; */
+   
     height: 100vh;
     display: flex;
     z-index: 200;
@@ -37,6 +36,17 @@
     background: #fff;
     top: 0;
     justify-content: center;
+
+    /* position: fixed;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0, 0, 0, 0.5);
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    z-index: 1; */
 }
 @media only screen and (max-width: 568px){
   .Dashboard{
