--- a/src/components/Header/Header.module.scss
+++ b/src/components/Header/Header.module.scss
@@ -292,6 +292,8 @@ line-height: normal;
   padding: 0 2%;
   width: 82%;
   margin-right: 27px;
+  margin-top: 10px;
+  // margin-bottom: 20px;
   height: 100%;
   justify-content: space-between;
   align-items: center;
