--- a/src/containers/MainContainer/Dashboard/Dashboard.module.css
+++ b/src/containers/MainContainer/Dashboard/Dashboard.module.css
@@ -466,3 +466,14 @@ width: 100%;
 height: 100%;
 }
 }
+
+
+.refreshIcon{
+  margin-left:10px;
+  cursor: pointer;
+  width: fit-content;
+  border-radius: 5px;
+  padding:3px;
+  padding-right: 0px;
+  border: 2px solid grey;
+}
