--- a/src/App.css
+++ b/src/App.css
@@ -551,3 +551,22 @@ text-align: center;
 overflow: auto !important;
 }
 }
+
+
+.loader-container {
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1;
+}
+
+.loader-image {
+  width: 150px; 
+  height: 150px;
+}
