--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -70,27 +70,44 @@
 // Sidebar Active Route
 
 .MenuItems ul li.Active {
-  // background: #f1f2f8;
-  // background: #ee3c3c;  
-  // background: var(--Grey-Shade, #ECECEC);
-  // background: var(--sideb
-  
+ 
   background: #d9d7ff;
   color:  var(--Gradients-Red, #E31E24);
   font-weight: 500;
-  // border-right: solid 3px var(--button-color);
-  border-radius: 8px;  
-  // border-right: solid 3px #183883 ;  
-  // border-radius: 3px 3px;
-  // border-radius: 0px 0.529vw 0.529vw 0px;
-  // color: #383b53;
-  // color: var(--Primary-Color, #183883);
-  // color: #fff;
-  // color: black;
+  border-radius: 8px; 
   img svg path{
     fill: #FFF;
   }
 }
+
+// .MenuItems ul li.Active::before{
+//   content: "";
+//   width: 30px;
+//   height: 30px;
+//   margin-top: -30px;
+//   transform: rotate(90deg) scale(1.04);
+//   background-size: 100%;
+//   background-image: url('../../assets/Sidebar/Up.svg');
+//   position: absolute;
+//   top: 0;
+//   right: 0;
+//   margin-right: -1.25rem;
+// }
+// .MenuItems ul li.Active::after{
+//   content: "";
+//   width: 30px;
+//   height: 30px;
+//   margin-top: -30px;
+//   transform: rotate(90deg) scale(1.04);
+//   background-size: 100%;
+//   background-image: url('../../assets/Sidebar/Down.svg');
+//   position: absolute;
+//   top: 0;
+//   right: 0;
+//   margin-right: -1.25rem;
+// }
+
+
 
 // Sidebar Active Route Icon Color
 .MenuItems {
