--- a/src/containers/Login/Login.module.css
+++ b/src/containers/Login/Login.module.css
@@ -136,6 +136,16 @@ display: flex;
 flex-direction: column;
 }
 
+.changebox{
+   width: 461px;
+
+  border-radius: 16px;
+  background: #FFF;
+  box-shadow: 0px 2px 4px 2px rgba(0, 0, 0, 0.08);
+  display: flex;
+  flex-direction: column;
+}
+
 .textcontainer{
   display: flex;
   flex-direction: column;
@@ -220,4 +230,11 @@ font-weight: 500;
   margin-left: 325px;
 }
 
+
+.close{
+  display: flex;
+  justify-content: flex-end;
+  margin-top: -20px;
+  margin-right: -18px;
+}
 
