--- a/src/containers/Login/Login.module.css
+++ b/src/containers/Login/Login.module.css
@@ -238,3 +238,26 @@ font-weight: 500;
   margin-right: -18px;
 }
 
+
+
+.header{
+  display: flex;
+  width: 100%;
+justify-content: space-between;
+align-items: center;
+padding: 7px 20px;
+font-size: 1.4rem;
+background-color: #F2F2F2;
+position: sticky;
+top: 0px;
+font-weight: 600;
+}
+
+.headerLogo{
+transform: scale(1.3);
+}
+
+.header button{
+  font-size: 1.4rem;
+  border: none;
+}
