--- a/src/containers/MainContainer/Dashboard/Dashboard.module.css
+++ b/src/containers/MainContainer/Dashboard/Dashboard.module.css
@@ -71,7 +71,7 @@
   flex-direction: column;
   gap: 10px; */
   height: 50px;
-  padding: 10px 0;
+  /* padding: 10px 0; */
   position: sticky;
 }
 
@@ -110,7 +110,8 @@ margin: 20px 0px 0px 20px;
 }
 .graphdata{
  /* min-height: 66%; */
-  box-shadow: 0px 7.065px 14.13px -6.182px rgba(3, 29, 53, 0.11);
+ 
+  /* box-shadow: 0px 7.065px 14.13px -6.182px rgba(3, 29, 53, 0.11); */
   border-radius: 16px;
   height: 350px;
   overflow-y: scroll;
@@ -180,7 +181,7 @@ margin-top: 10px;
   font-size: 14px;
 }
 .DashboardContainer {
-  display: flex;
+  /* display: flex; */
   gap: 1vw;
 }
 
@@ -509,14 +510,16 @@ height: 100%;
 }
 
 .atmoffliine{
-  width: 30%;
-  background-color:#f3898c;
+  width: 31%;
+  background-color:#fababb;
   padding: 10px;
-  border: 1px solid black;
-  border-radius: 5px;
+  /* border: 1px solid black; */
+  border-radius: 8px;
   margin-top: 10px;
   margin-bottom: 10px;
   display: flex;
   justify-content: center;
   align-items: center;
+  cursor: pointer;
+  font-size: 14px;
 }
