--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -2,10 +2,10 @@
   width: 16vw;
   min-height: 87.8vh;
   // background: var(--sidebar-color);
-  background: #ffffff;
+  background: #d9d7ff;
   box-shadow: -1px 9px 6.2px -5px rgba(54, 54, 54, 0.05), 0 1px 9px 0 rgba(0, 0, 0, 0.07);
   // background: #FFF5EB;
-  padding: 0px 0px 3.704vw 0;
+  padding: 5px 0px 3.704vw 0;
   display: flex;
   justify-content: space-between;
   flex-direction: column;
@@ -43,7 +43,7 @@
 .MenuItems {
   ul {
     li {
-      margin: 0 10px;
+      margin: 0px 0px 0px 10px;
       height: 3.25vw;
       // color: #f1f2f8;
       // color: var(--sidebar-tab-text-color);
@@ -70,42 +70,40 @@
 // Sidebar Active Route
 
 .MenuItems ul li.Active {
- 
-  background: #d9d7ff;
+    outline: none;
+    position: relative;
+    border-top-left-radius: 20px;
+    border-bottom-left-radius: 20px;
+   background: #ffffff;
   color:  var(--Gradients-Red, #E31E24);
   font-weight: 500;
-  border-radius: 8px; 
   img svg path{
     fill: #FFF;
   }
 }
 
-// .MenuItems ul li.Active::before{
-//   content: "";
-//   width: 30px;
-//   height: 30px;
-//   margin-top: -30px;
-//   transform: rotate(90deg) scale(1.04);
-//   background-size: 100%;
-//   background-image: url('../../assets/Sidebar/Up.svg');
-//   position: absolute;
-//   top: 0;
-//   right: 0;
-//   margin-right: -1.25rem;
-// }
-// .MenuItems ul li.Active::after{
-//   content: "";
-//   width: 30px;
-//   height: 30px;
-//   margin-top: -30px;
-//   transform: rotate(90deg) scale(1.04);
-//   background-size: 100%;
-//   background-image: url('../../assets/Sidebar/Down.svg');
-//   position: absolute;
-//   top: 0;
-//   right: 0;
-//   margin-right: -1.25rem;
-// }
+.MenuItems ul li.Active::before{
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  top: 100%;
+  right: 0;
+  height: 35px;
+  width: 35px;
+  border-top-right-radius: 18px;
+  box-shadow: 0 -20px 0 0 #ffffff;
+}
+.MenuItems ul li.Active::after{
+  content: "";
+  position: absolute;
+  background-color: transparent;
+  bottom: 100%;
+  right: 0;
+  height: 35px;
+  width: 35px;
+  border-bottom-right-radius: 18px;
+  box-shadow: 0 20px 0 0 #ffffff;
+}
 
 
 
