--- a/src/layouts/opps.module.css
+++ b/src/layouts/opps.module.css
@@ -3,9 +3,13 @@
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    margin-top: 30vw;
+    margin-top: 5vw;
 }
 .OppsButton{
 margin-top: 3vw;
 margin-left: 44vw;
+}
+
+.text{
+font-size: 20px;
 }
